--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Queued
+      fonts:
+        - asset: assets/fonts/Queued.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
