--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,9 @@ dependencies:
   flutter_riverpod: ^0.12.1
   lint: ^1.3.0
   firebase_core: ^0.5.2
-  cloud_firestore: ^0.14.3
+  cloud_firestore: ^0.14.4
   firebase_auth: ^0.18.4
+  stream_transform: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
