--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_auth: ^0.18.4
   stream_transform: ^1.2.0
   spotify_sdk: ^1.0.0
+  dio: 3.0.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
