--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   stream_transform: ^1.2.0
   spotify_sdk: ^1.0.0
   dio: 3.0.10
+  spotify: ^0.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
